# gryds

./: Cargo.toml  README.md
assets/shaders/: basic.frag  basic.vert  triangle.vert
src/: cfile.rs  ctr.rs  game.rs  main.rs  mazegen.rs  mazemesh.rs
src/renderer/: glmesh.rs  mesh.rs  meshloader.rs  mod.rs  program.rs  shader.rs
