[package]
name = "gryds"
version = "0.1.0"
authors = ["ManEnfu <hxrd97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = { git = "https://github.com/bjz/glfw-rs.git" }
gl = "0.10.0"
nalgebra-glm = "0.5.0"
rand = "0.7.2"
scan_fmt = "0.2"
